# dot-repl

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: dioxus.yml
crates/managers-template/: Cargo.toml
crates/managers-template/examples/: basic.rs  dot_generation.rs
crates/managers-template/src/: dot.rs  lib.rs
