[workspace]
resolver = "2"
members = [
  "packages/ui",
  "packages/web",
  "packages/desktop",
  "packages/mobile",
  "packages/api",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }
base64 = "0.22.1"
web-sys = { version = "0.3", features = ["Element", "Window"] }

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
